# sktimeutils

./: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  env.yml  pyproject.toml  setup.cfg
.github/workflows/: release.yml  test.yml
conda.recipe/: meta.yaml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  installation.rst  mjd.rst
docs/source/_static/: sksoftware.css
docs/src/: .gitignore  conf.py  eci.rst  index.rst  installation.rst  juliandate.rst  mjd.rst
src/sktimeutils/: __init__.py  _version.py  datetime64.py  eci.py  getversion.py  juliandate.py  mjd.py
src/sktimeutils/tests/: test_conversions.py  test_jd.py  test_mjd.py
