# pyproject.toml
[project]
name = "sktimeutils"
dependencies = ["numpy", "jdcal"]
license = {text = "MIT"}
authors=[{name='usask-arg'}, {name='Nick Lloyd'}]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# [tool.setuptools.package-data]
# skoptics = ["ali_elements/data/*.txt", "ali_elements/data/*.nc", "ali_elements/data/*.xlsx", "common_elements/data/*.txt", "common_elements/data/*.nc", "common_elements/data/*.xlsx", "rtm/data/*.txt"]

[tool.setuptools_scm]
write_to = "src/sktimeutils/_version.py"
